# Manganese-Mod

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  Durangling.sln  GOALS.md  LONG_TERM_GOALS.md  Manganese.sln  Manganese.vcxproj  Manganese.vcxproj.filters  README.md  Resource.rc  dllmain.cpp
.github/workflows/: msbuild.yml  nightly.yml
Detours/vc/: Detours.sln  Detours.vcxproj
Durangling/: Detour.cs
Durangling.MinecraftWrapper/: Addresses.cs
Durangling.MinecraftWrapper/Client/Renderer/: BlockRenderer.cs  LevelRenderer.cs  Renderer.cs
Durangling.MinecraftWrapper/Client/Renderer/Texture/: Texture.cs
Durangling.MinecraftWrapper/Server/: ServerLevel.cs
Durangling.MinecraftWrapper/World/Blocks/: LeafBlock.cs
Manganese/: Manganese.cs  Manganese.csproj  ModEntrypoint.cs
Manganese/Hooks/: BlockHooks.cs  LeafBlockHooks.cs  LevelRendererHooks.cs  RendererHooks.cs  ServerLevelHooks.cs  TextureHooks.cs
Manganese/Utils/: TextureUtil.cs  TextureUtils.cs
Src/: Hooks.cpp  Hooks.h  Manganese.cpp  Manganese.h  Mod.cpp  Mod.h  Options.h
Src/Assets/: Resource.rc
Src/Config/: Options.cpp  Options.h
Src/Helper/: LevelHelper.cpp  LevelHelper.h  RendererHelper.cpp  RendererHelper.h  TextureHelper.cpp  TextureHelper.h  UIHelper.cpp  UIHelper.h
Src/Hooks/: DefaultHooks.h  HookIncludes.h  Hooks.cpp  Hooks.h  LeafBlockHooks.cpp  LeafBlockHooks.h  LevelHooks.cpp  LevelHooks.h  LevelRendererHooks.cpp  LevelRendererHooks.h  RendererHooks.cpp  RendererHooks.h  ServerLevelHooks.cpp  ServerLevelHooks.h  TextureHooks.cpp  TextureHooks.h  UIScene_SettingsListMenuHooks.cpp  UIScene_SettingsListMenuHooks.h
Src/Hooks/Minecraft/Client/: Minecraft.cpp  Minecraft.h
Src/Hooks/Minecraft/Client/Renderer/: BlockRenderer.cpp  BlockRenderer.h  Camera.cpp  Camera.h  GameRenderer.cpp  GameRenderer.h  GlStateManager.cpp  GlStateManager.h  LevelRenderer.cpp  LevelRenderer.h  Renderer.cpp  Renderer.h
Src/Hooks/Minecraft/Client/Renderer/Texture/: BufferedImage.cpp  BufferedImage.h  Texture.cpp  Texture.h
Src/Hooks/Minecraft/Client/UI/: UIString.cpp  UIString.h
Src/Hooks/Minecraft/Client/UI/Control/: UIControl_List.cpp  UIControl_List.h  UIControl_MultiList.cpp  UIControl_MultiList.h
Src/Hooks/Minecraft/Client/UI/FUI/: Fui.cpp  Fui.h
Src/Hooks/Minecraft/Client/UI/Scene/: UIScene_SettingsListMenu.cpp  UIScene_SettingsListMenu.h
Src/Hooks/Minecraft/Core/: FloatBuffer.h
Src/Hooks/Minecraft/Server/: ServerLevel.cpp  ServerLevel.h
Src/Hooks/Minecraft/World/: EnchantmentHelper.cpp  EnchantmentHelper.h  Level.cpp  Level.h
Src/Hooks/Minecraft/World/Blocks/: LeafBlock.cpp  LeafBlock.h
Src/Hooks/Minecraft/World/Entities/: Entity.h
Src/Utils/: HandleHelper.cpp  HandleHelper.h  HookHelperExtension.h  LanternLoggerExtension.h  Logger.cpp  Logger.h  MemoryHandler.h  TextureHelper.cpp  TextureHelper.h
